fixed overflow

--- a/style.css
+++ b/style.css
@@ -117,7 +117,6 @@ body {
 .challenges-body {
   background-color: #1e1e1e;
   margin: 0;
-  overflow: hidden;
 }
 
 .statuscodelogo {
@@ -159,7 +158,7 @@ body {
   width: 11vw;
   top: 80.4vh;
   left: 19.7vw;
-  height: 13.5vh;
+  height: 15vh;
 }
 
 .card_border3 {
@@ -167,7 +166,7 @@ body {
   width: 12vw;
   top: 15vh;
   left: 16.5vw;
-  height: 14.9vh;
+  height: 15vh;
 }
 
 .card_border4 {
@@ -175,7 +174,7 @@ body {
   width: 11vw;
   top: 0.5vh;
   left: 60vw;
-  height: 13.3vh;
+  height: 15vh;
 }
 
 .card1text {
